--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Evento</title>
+
+    <link rel="icon" href="https://i.ibb.co/G9fSDPW/evento-favicon.png" />
+
+    <title>Evento -- Events Anywhere</title>
   </head>
-  <body></body>
+  <body>
+    blahblah
+  </body>
 </html>
