--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="icon" href="https://i.ibb.co/G9fSDPW/evento-favicon.png" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Lato%3Awght%40400%3B700%3B800%3B900&display=swap"
+    />
+    <link rel="stylesheet" href="styles.css" />
 
     <title>Evento -- Events Anywhere</title>
   </head>
