header structure added

--- a/index.html
+++ b/index.html
@@ -13,5 +13,17 @@
 
     <title>Evento -- Events Anywhere</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <p class="logo">Evento</p>
+      <ul class="links">
+        <a class="link" href="/concets"><li class="link-item"></li></a>
+        <a class="link" href="/sports"><li></li></a>
+        <a class="link" href="/conferences"></a>
+        <li></li>
+      </ul>
+    </header>
+    <main class="main"></main>
+    <footer></footer>
+  </body>
 </html>
