header links added

--- a/index.html
+++ b/index.html
@@ -17,10 +17,13 @@
     <header class="header">
       <p class="logo">Evento</p>
       <ul class="links">
-        <a class="link" href="/concets"><li class="link-item"></li></a>
-        <a class="link" href="/sports"><li></li></a>
-        <a class="link" href="/conferences"></a>
-        <li></li>
+        <a class="link" href="/concets">
+          <li class="link-item">Concerts</li>
+        </a>
+        <a class="link" href="/sports"><li class="link-item">Sports</li></a>
+        <a class="link" href="/conferences">
+          <li class="link-item">Conferences</li></a
+        >
       </ul>
     </header>
     <main class="main"></main>
