main content added

--- a/index.html
+++ b/index.html
@@ -26,7 +26,14 @@
         >
       </ul>
     </header>
-    <main class="main"></main>
+    <main class="main">
+      <h1 class="heading">Find and Book Events Anywhere</h1>
+      <p class="text">
+        Search through hundreds of events to find your next one. get your
+        tickets safely through <span class="text--bold">Evento</span>.
+      </p>
+      <form class="form"><input class="input" placeholder="Find events by city (e.g. Vancouver)"><button class="btn">Search</button></form>
+      
     <footer></footer>
   </body>
 </html>
