--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
       </p>
       <form class="form"><input class="input" placeholder="Find events by city (e.g. Vancouver)"><button class="btn">Search</button></form>
       
-    <footer></footer>
+    <footer class="footer">
+        <p class="copyright"> &copy; 2025. Copyright ny Evento</p>
+<p class="stats" >18,430 events. 322 cities.</p>
+
+    </footer>
   </body>
 </html>
